--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,16 @@
 Options -Indexes
+
 ExpiresActive On
-ExpiresByType common/img/*.* "access plus 10 days"
+ExpiresByType text/css "access plus 1 days"
+ExpiresByType image/gif "access plus 10 days"
+ExpiresByType image/jpg "access plus 10 days"
+ExpiresByType image/jpeg "access plus 10 days"
+ExpiresByType image/png "access plus 10 days"
+ExpiresByType application/x-javascript "access plus 10 days"
 
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/html text/plain text/xml
 </IfModule>
-
-DirectoryIndex profile.html
 
 
 
