--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 Options -Indexes
 
+<IfModule mod_expires.c>
 ExpiresActive On
 ExpiresByType text/css "access plus 1 days"
 ExpiresByType image/gif "access plus 10 days"
@@ -7,6 +8,7 @@ ExpiresByType image/jpg "access plus 10 days"
 ExpiresByType image/jpeg "access plus 10 days"
 ExpiresByType image/png "access plus 10 days"
 ExpiresByType application/x-javascript "access plus 10 days"
+</IfModule>
 
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/html text/plain text/xml
