--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,8 @@
 Options -Indexes
 
-<IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType "access plus 1 days"
-ExpiresByType text/css "access plus 1 days"
-ExpiresByType image/gif "access plus 10 days"
-ExpiresByType image/jpg "access plus 10 days"
-ExpiresByType image/jpeg "access plus 10 days"
-ExpiresByType image/png "access plus 864000 seconds"
-ExpiresByType application/x-javascript "access plus 10 days"
-</IfModule>
+<Files ~ "common.*$">
+	Header set Cache-Control "max-age=864000, public"
+</Files>
 
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/html text/plain text/xml
